p2/kubectl_manif/app_three_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  selector:
    matchLabels:
      app: app-three
  replicas: 1
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: nginx
        image: toto1337/node:1.0.1
        ports:
        - containerPort: 3000
