p2/kubectl_manif/app_two_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  selector:
    matchLabels:
      app: app-two
  replicas: 3
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: nginx
        image: toto1337/node:1.0.1
        ports:
        - containerPort: 80
