p2/kubectl_manif/service-app-one.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  type: ClusterIP
  selector:
    app: app-one
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
