p2/kubectl_manif/service-app-two.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two-service
spec:
  type: ClusterIP
  selector:
    app: app-one
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
